--- a/PopcornApp/app/src/main/res/layout/activity_order_finalization.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_order_finalization.xml
@@ -215,11 +215,42 @@
             android:textColor="@color/TextColor"
             android:textSize="@dimen/abc_text_size_headline_material" />
 
-        <ListView
-            android:id="@+id/listView2"
-            android:layout_width="wrap_content"
-            android:layout_height="123dp"
-            android:layout_gravity="left|top" />
+        <GridLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnCount="2"
+            android:orientation="vertical"
+            android:rowCount="6">
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Buffalo Cheddar Cheese"
+                    android:layout_weight=".5"
+                    android:gravity="right"
+                    android:textColor="@color/TextColor"/>
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".05"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="0"
+                    android:id="@+id/textView3"
+                    android:layout_weight=".5"
+                    android:gravity="left"
+                    android:textColor="@color/TextColor"/>
+            </TableRow>
+        </GridLayout>
 
         <TextView
             android:layout_width="wrap_content"
